feat(fabric): 切换D3D12后端为JNA并添加调试测试
- 为fabric模块添加JNA 5.17.0依赖
- 更新build.gradle注释，替换原有Java Foreign API相关说明
- 新增多个DXGI与JNA COM接口调试测试类
- 优化现有JnaPointerDebug类的调试逻辑与输出内容