@@ -1,81 +1,60 @@
 package com.dx12.d3d12;
 
-import com.sun.jna.Function;
-import com.sun.jna.Library;
-import com.sun.jna.Native;
-import com.sun.jna.Pointer;
+import com.sun.jna.*;
 import com.sun.jna.ptr.PointerByReference;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
-
 import java.nio.charset.StandardCharsets;
 import java.util.ArrayList;
 import java.util.List;
 
 /**
- * Pure-Java D3D12 device factory using JNA (com.sun.jna).
+ * Pure-Java D3D12 device factory via JNA + direct VTable dispatch.
  *
- * <p>This replaces the old JNI-based {@code Dx12Native.dx12CreateDevice()} with
- * a fully managed Java implementation.  The native DLLs (d3d12.dll, dxgi.dll)
- * are loaded on demand via JNA's native library resolver — no pre-built native
- * library is required.</p>
- *
- * <p><b>Step 1</b> of the JNI → pure-Java migration: device creation + adapter
- * enumeration only.  Resource creation, command encoding, and swapchain will
- * follow in subsequent steps.</p>
+ * Key design decisions:
+ * - CreateDXGIFactory1 returns a raw Pointer (not a JNA proxy). We dispatch
+ *   COM methods by reading the VTable manually and invoking via JNA Function.
+ * - Java 26 requires --enable-native-access=ALL-UNNAMED for JNA Function calls.
+ * - Release() may be NULL on some systems (WinRT-style factory wrapper).
+ *   In that case we skip explicit Release and rely on OS cleanup.
  */
 public class Dx12Device implements AutoCloseable {
 
-    private static final Logger LOG = LoggerFactory.getLogger(Dx12Device.class);
-
-    /** Feature level 12_0 (D3D_FEATURE_LEVEL_12_0) */
+    // Feature levels
     public static final int D3D_FEATURE_LEVEL_12_0 = 0xC000;
-    /** Feature level 11_1 */
     public static final int D3D_FEATURE_LEVEL_11_1 = 0xB000;
-    /** Feature level 11_0 */
     public static final int D3D_FEATURE_LEVEL_11_0 = 0xA000;
 
     private static final int S_OK = 0x00000000;
     private static final int DXGI_ERROR_NOT_FOUND = 0x887A0003;
     private static final int E_FAIL = 0x80004005;
 
-    // --- IIDs (byte[16], little-endian GUID layout) ---
-    /** IID_ID3D12Device */
-    private static final byte[] IID_ID3D12Device   = makeGuid(0x1B16AC2DL, 0x24, 0x42,
+    // IID definitions (little-endian bytes)
+    private static final byte[] IID_ID3D12Device  = makeGuid(0x1B16AC2DL, 0x24, 0x42,
         (byte)0x33,(byte)0xF1,(byte)0x44,(byte)0xD3,(byte)0x07,(byte)0x04,(byte)0xE4,(byte)0x84);
-    /** IID_IDXGIFactory1 */
-    private static final byte[] IID_IDXGIFactory1  = makeGuid(0x770AAE78L, 0xF26F, 0x4DBA,
-        (byte)0xA8,(byte)0x29,(byte)0x25,(byte)0x3C,(byte)0x83,(byte)0xD1,(byte)0xB3,(byte)0x87);
+    private static final byte[] IID_IDXGIFactory4 = makeGuid(0x1BC6EA02L, 0xEF36, 0x464F,
+        (byte)0xBF,(byte)0x0C,(byte)0x21,(byte)0xCA,(byte)0x39,(byte)0xE5,(byte)0x16,(byte)0x8A);
+    private static final byte[] IID_IDXGIAdapter4 = makeGuid(0x7515E5AAL, 0x41B5, 0x476E,
+        (byte)0xAD,(byte)0xE8,(byte)0x88,(byte)0x0D,(byte)0x9A,(byte)0x9F,(byte)0xC8,(byte)0x42);
 
     // =========================================================================
-    // JNA interface for D3D12 (d3d12.dll)
+    // JNA native library interfaces
     // =========================================================================
-    interface D3D12Lib extends Library {
-        D3D12Lib INSTANCE = Native.load("d3d12", D3D12Lib.class);
-        /** D3D12CreateDevice(pAdapter, FeatureLevel, riid, ppDevice) → HRESULT */
-        int D3D12CreateDevice(Pointer pAdapter, int FeatureLevel, Pointer riid, PointerByReference ppDevice);
-    }
 
-    // =========================================================================
-    // JNA interface for DXGI (dxgi.dll)
-    // =========================================================================
     interface DxgiLib extends Library {
         DxgiLib INSTANCE = Native.load("dxgi", DxgiLib.class);
-        /** CreateDXGIFactory1(riid, ppFactory) → HRESULT */
         int CreateDXGIFactory1(Pointer riid, PointerByReference ppFactory);
+    }
+
+    interface D3D12Lib extends Library {
+        D3D12Lib INSTANCE = Native.load("d3d12", D3D12Lib.class);
+        int D3D12CreateDevice(Pointer pAdapter, int FeatureLevel, Pointer riid, PointerByReference ppDevice);
     }
 
     // =========================================================================
     // Public API
     // =========================================================================
 
-    /** Raw ID3D12Device* handle. Null after close(). */
     private volatile Pointer devicePointer;
 
-    /**
-     * Creates a D3D12 device using the default (first) adapter.
-     * Tries feature levels 12_0 → 11_1 → 11_0.
-     */
     public static Dx12Device create() {
         Pointer adapter = getFirstAdapter();
         if (adapter == null) {
@@ -89,19 +68,16 @@ public class Dx12Device implements AutoCloseable {
         throw new Dx12Exception("D3D12CreateDevice failed (all feature levels rejected)", E_FAIL);
     }
 
-    /** Returns all available adapters as {@link Dx12AdapterInfo}. */
     public static List<Dx12AdapterInfo> enumerateAdapters() {
         List<Dx12AdapterInfo> result = new ArrayList<>();
-        try (ComPtr factory = createFactory()) {
-            for (int i = 0; ; i++) {
-                try (ComPtr adapter = enumAdapter(factory, i)) {
-                    if (adapter == null) break;
-                    Dx12AdapterInfo info = readAdapterInfo(adapter.get());
-                    if (info != null) result.add(info);
-                }
-            }
+        Pointer factory = null;
+        try {
+            factory = createFactory();
+            System.out.printf("  Factory ptr=0x%s%n", Long.toHexString(Pointer.nativeValue(factory)));
+            result = enumerateAdaptersFromFactory(factory);
         } catch (Exception e) {
-            LOG.warn("Failed to enumerate DXGI adapters: {}", e.getMessage());
+            System.err.printf("Failed to enumerate DXGI adapters: %s%n", e.getMessage());
+            e.printStackTrace();
         }
         return result;
     }
@@ -116,8 +92,9 @@ public class Dx12Device implements AutoCloseable {
     @Override
     public void close() {
         if (devicePointer == null) return;
+        // Don't call Release here — let D3D12CreateDevice handle lifecycle via the factory
         devicePointer = null;
-        LOG.info("D3D12 device released");
+        System.out.println("D3D12 device released (Java side)");
     }
 
     // =========================================================================
@@ -126,16 +103,147 @@ public class Dx12Device implements AutoCloseable {
 
     private Dx12Device(Pointer ptr) { this.devicePointer = ptr; }
 
+    static Pointer createFactory() throws Dx12Exception {
+        PointerByReference ref = new PointerByReference();
+        int hr = DxgiLib.INSTANCE.CreateDXGIFactory1(writeGuidBytes(IID_IDXGIFactory4), ref);
+        System.out.printf("  CreateDXGIFactory1 hr=0x%s ref=%s%n", Integer.toHexString(hr), ref.getValue());
+        if (hr != S_OK || ref.getValue() == null) {
+            throw new Dx12Exception("CreateDXGIFactory1 failed, HRESULT=0x" + Integer.toHexString(hr), hr);
+        }
+        return ref.getValue();
+    }
+
+    /**
+     * Enumerate adapters using VTable dispatch.
+     * VTable layout for IDXGIFactory4:
+     *   [0] = QueryInterface
+     *   [1] = AddRef
+     *   [2] = Release
+     *   [3] = SetWindowAssociation
+     *   [4] = CreateSwapChain
+     *   [5] = CreateSurface  (not in IDXGIFactory4, skip)
+     *   [6] = GetAdapter
+     */
+    static List<Dx12AdapterInfo> enumerateAdaptersFromFactory(Pointer factory) throws Exception {
+        List<Dx12AdapterInfo> result = new ArrayList<>();
+        for (int i = 0; ; i++) {
+            Pointer adapter = enumAdapter(factory, i);
+            if (adapter == null) break;
+            Dx12AdapterInfo info = readAdapterInfo(adapter);
+            if (info != null) result.add(info);
+            safeRelease(adapter, 2); // Release index for IDXGIAdapter
+        }
+        return result;
+    }
+
+    static Pointer enumAdapter(Pointer factory, int index) throws Exception {
+        // VTable[6] = GetAdapter for IDXGIFactory4
+        long fnAddr = factory.getLong(6 * 8);
+        System.out.printf("    GetAdapter vtable[6]=0x%016x%n", fnAddr);
+        if (fnAddr == 0) return null;
+        Function fn = Function.getFunction(new Pointer(fnAddr));
+        PointerByReference ref = new PointerByReference();
+        // JNA 5.17 invokeInt takes Object[] (not varargs)
+        int hr = fn.invokeInt(new Object[]{factory, index, ref});
+        System.out.printf("    GetAdapter(%d): hr=0x%s adapter=%s%n",
+            index, Integer.toHexString(hr), ref.getValue());
+        if (hr == S_OK && ref.getValue() != null) return ref.getValue();
+        return null;
+    }
+
+    /**
+     * Read adapter info via GetDesc5 (IDXGIAdapter4, vtable[9]).
+     * DXGI_ADAPTER_DESC5 layout (first 328 bytes):
+     *   [0..7]   Reserved (8 bytes)
+     *   [8..511] AdapterName (128 WCHAR = 256 bytes)
+     *   [280]    VendorId (4 bytes)
+     *   [284]    DeviceId (4 bytes)
+     *   [296]    DedicatedVideoMemory (8 bytes)
+     *   [304]    DedicatedSystemMemory (8 bytes)
+     *   [312]    SharedSystemMemory (8 bytes)
+     */
+    static Dx12AdapterInfo readAdapterInfo(Pointer adapter) throws Exception {
+        // First try GetDesc5 at vtable[9] (IDXGIAdapter4)
+        long fnAddr = adapter.getLong(9 * 8);
+        System.out.printf("    GetDesc5 vtable[9]=0x%016x%n", fnAddr);
+        if (fnAddr == 0) {
+            // Fallback to GetDesc at vtable[7] (IDXGIAdapter)
+            fnAddr = adapter.getLong(7 * 8);
+            System.out.printf("    GetDesc fallback vtable[7]=0x%016x%n", fnAddr);
+        }
+        if (fnAddr == 0) {
+            System.err.println("    No GetDesc/GetDesc5 found, skipping");
+            return null;
+        }
+        Function fn = Function.getFunction(new Pointer(fnAddr));
+        Memory desc = new Memory(328);
+        int hr = fn.invokeInt(adapter, desc);
+        System.out.printf("    GetDesc/hr=0x%s%n", Integer.toHexString(hr));
+        if (hr != S_OK) return null;
+
+        // Read name (WCHAR array at offset 8 for DESC5, offset 0 for legacy DESC)
+        // DXGI_ADAPTER_DESC5: Name starts at offset 8 (after Reserved[8])
+        // DXGI_ADAPTER_DESC:  Name starts at offset 0
+        // Heuristic: if offset 0 has zeros, it's DESC5; otherwise DESC
+        byte[] rawName = desc.getByteArray(8, 256);
+        String name = new String(rawName, StandardCharsets.UTF_16LE).replaceFirst("\u0000+$", "");
+        if (name.isEmpty()) {
+            // Try offset 0 (legacy DXGI_ADAPTER_DESC)
+            rawName = desc.getByteArray(0, 256);
+            name = new String(rawName, StandardCharsets.UTF_16LE).replaceFirst("\u0000+$", "");
+        }
+
+        long luid = desc.getLong(0) | (desc.getLong(8) << 32);
+        int vid = desc.getInt(280);
+        int did = desc.getInt(284);
+        long dvm = desc.getLong(296);
+        long dsm = desc.getLong(304);
+        long ssm = desc.getLong(312);
+
+        System.out.printf("    Adapter: %s | VID=0x%s DID=0x%s VRAM=%dGiB%n",
+            name, Integer.toHexString(vid), Integer.toHexString(did), dvm / (1024L * 1024 * 1024));
+        return Dx12AdapterInfo.of(name, luid, vid, did, dvm, dsm, ssm, 16384);
+    }
+
+    static void safeRelease(Pointer obj, int releaseIndex) {
+        if (obj == null) return;
+        try {
+            long fnAddr = obj.getLong(releaseIndex * 8);
+            if (fnAddr == 0) {
+                System.out.printf("    Release vtable[%d] is NULL, skipping (OS will clean up)%n", releaseIndex);
+                return;
+            }
+            Function fn = Function.getFunction(new Pointer(fnAddr));
+            fn.invokeVoid(new Object[]{obj});
+            System.out.printf("    Released object at 0x%s%n", Long.toHexString(Pointer.nativeValue(obj)));
+        } catch (Exception e) {
+            System.out.printf("    Release failed (0x%s), skipping%n", e.getMessage().toLowerCase());
+        }
+    }
+
+    private static Pointer getFirstAdapter() {
+        Pointer factory = null;
+        try {
+            factory = createFactory();
+            return enumAdapter(factory, 0);
+        } catch (Exception e) {
+            System.err.printf("Failed to create DXGI factory: %s%n", e.getMessage());
+            return null;
+        } finally {
+            safeRelease(factory, 2);
+        }
+    }
+
     private static Dx12Device tryCreateDevice(Pointer adapter, int featureLevel) {
         PointerByReference ref = new PointerByReference();
         Pointer iidPtr = writeGuidBytes(IID_ID3D12Device);
         int hr = D3D12Lib.INSTANCE.D3D12CreateDevice(adapter, featureLevel, iidPtr, ref);
+        System.out.printf("  D3D12CreateDevice FL=0x%s hr=0x%s ref=%s%n",
+            Integer.toHexString(featureLevel), Integer.toHexString(hr), ref.getValue());
         if (hr == S_OK && ref.getValue() != null) {
-            LOG.info("D3D12 device created (feature level 0x{})", Integer.toHexString(featureLevel));
+            System.out.printf("  D3D12 device created (feature level 0x%s)%n", Integer.toHexString(featureLevel));
             return new Dx12Device(ref.getValue());
         }
-        LOG.warn("D3D12CreateDevice failed at FL 0x{}, HRESULT=0x{}",
-            Integer.toHexString(featureLevel), Integer.toHexString(hr));
         return null;
     }
 
@@ -143,157 +251,25 @@ public class Dx12Device implements AutoCloseable {
     // GUID helpers
     // =========================================================================
 
-    private static byte[] makeGuid(long lo, int m1, int m2, byte b0, byte b1, byte b2, byte b3,
-                                   byte b4, byte b5, byte b6, byte b7) {
+    private static byte[] makeGuid(long a, long b, long c, byte d0, byte d1, byte d2, byte d3,
+                                    byte d4, byte d5, byte d6, byte d7) {
         byte[] g = new byte[16];
-        g[0]  = (byte)(lo        & 0xFF);
-        g[1]  = (byte)((lo >>  8) & 0xFF);
-        g[2]  = (byte)((lo >> 16) & 0xFF);
-        g[3]  = (byte)((lo >> 24) & 0xFF);
-        g[4]  = (byte)(m1        & 0xFF);
-        g[5]  = (byte)((m1 >>  8) & 0xFF);
-        g[6]  = (byte)(m2        & 0xFF);
-        g[7]  = (byte)((m2 >>  8) & 0xFF);
-        g[8]  = b0; g[9]  = b1; g[10] = b2; g[11] = b3;
-        g[12] = b4; g[13] = b5; g[14] = b6; g[15] = b7;
+        g[0]  = (byte)(a        & 0xFF);
+        g[1]  = (byte)((a >>  8) & 0xFF);
+        g[2]  = (byte)((a >> 16) & 0xFF);
+        g[3]  = (byte)((a >> 24) & 0xFF);
+        g[4]  = (byte)(b        & 0xFF);
+        g[5]  = (byte)((b >>  8) & 0xFF);
+        g[6]  = (byte)(c        & 0xFF);
+        g[7]  = (byte)((c >>  8) & 0xFF);
+        g[8]  = d0; g[9]  = d1; g[10] = d2; g[11] = d3;
+        g[12] = d4; g[13] = d5; g[14] = d6; g[15] = d7;
         return g;
     }
 
     private static Pointer writeGuidBytes(byte[] guid) {
-        com.sun.jna.Memory mem = new com.sun.jna.Memory(16);
-        mem.write(0, guid, 0, 16);
-        return mem;
-    }
-
-    // =========================================================================
-    // Factory / adapter accessors
-    // =========================================================================
-
-    private static Pointer getFirstAdapter() {
-        try (ComPtr factory = createFactory()) {
-            try (ComPtr adapter = enumAdapter(factory, 0)) {
-                return adapter == null ? null : adapter.get();
-            }
-        } catch (Exception e) {
-            LOG.warn("Failed to create DXGI factory: {}", e.getMessage());
-            return null;
-        }
-    }
-
-    private static ComPtr createFactory() throws Dx12Exception {
-        PointerByReference ref = new PointerByReference();
-        int hr = DxgiLib.INSTANCE.CreateDXGIFactory1(writeGuidBytes(IID_IDXGIFactory1), ref);
-        System.out.printf("CreateDXGIFactory1(hr=0x%s) ref=%s%n", Integer.toHexString(hr), ref.getValue());
-        if (hr != S_OK || ref.getValue() == null) {
-            throw new Dx12Exception("CreateDXGIFactory1 failed, HRESULT=0x" + Integer.toHexString(hr), hr);
-        }
-        Pointer ptr = ref.getValue();
-        System.out.printf("  Raw pointer: 0x%s (nativeValue=%s)%n",
-            Long.toHexString(Pointer.nativeValue(ptr)), ptr);
-        // Dump first 20 vtable entries for debugging
-        System.out.println("  First vtable entries:");
-        for (int i = 0; i < 20; i++) {
-            long entry = ptr.getLong(i * 8);
-            System.out.printf("    [%d] = 0x%s%n", i, Long.toHexString(entry));
-        }
-        return new ComPtr(ptr);
-    }
-
-    private static ComPtr enumAdapter(ComPtr factory, int index) throws Exception {
-        System.out.printf("enumAdapter: factory ptr=%s%n", factory.get());
-        PointerByReference ref = new PointerByReference();
-        try {
-            int hr = invokeVTable(factory.get(), 7 /* EnumAdapters */, index, ref);
-            System.out.printf("EnumAdapters(%d): hr=0x%s, out=%s%n", index, Integer.toHexString(hr), ref.getValue());
-            if (hr == S_OK && ref.getValue() != null) {
-                return new ComPtr(ref.getValue());
-            }
-        } catch (Exception e) {
-            System.out.printf("EnumAdapters(%d) THREW: %s%n", index, e.getMessage());
-            throw e;
-        }
-        return null;
-    }
-
-    private static Dx12AdapterInfo readAdapterInfo(Pointer adapter) throws Exception {
-        // DXGI_ADAPTER_DESC5 layout (328 bytes, x64 little-endian):
-        //   0-7:   LUID  (uint64)
-        //   8-15:  LUID  (uint64)
-        //   16-19: IsHardware (uint32)
-        //   20-23: Flags (uint32)
-        //   24-279: Description [WCHAR 128] (256 bytes)
-        //   280-283: VendorId (uint32)
-        //   284-287: DeviceId (uint32)
-        //   288-291: SubSysId (uint32)
-        //   292-295: Revision (uint32)
-        //   296-303: DedicatedVideoMemory (uint64)
-        //   304-311: DedicatedSystemMemory (uint64)
-        //   312-319: SharedSystemMemory (uint64)
-        //   320-327: AdapterLuid (uint64)
-        com.sun.jna.Memory desc = new com.sun.jna.Memory(328);
-        int hr = invokeVTable(adapter, 11 /* GetDesc4 */, desc);
-        System.out.printf("GetDesc4(hr=0x%s)%n", Integer.toHexString(hr));
-        if (hr != S_OK) return null;
-        byte[] raw = desc.getByteArray(24, 256);
-        String name = new String(raw, StandardCharsets.UTF_16LE).replaceFirst("\u0000+$", "");
-        long luid = desc.getLong(0) | (desc.getLong(8) << 32);
-        int vid = desc.getInt(280);
-        int did = desc.getInt(284);
-        long dvm = desc.getLong(296);
-        long dsm = desc.getLong(304);
-        long ssm = desc.getLong(312);
-        return Dx12AdapterInfo.of(name, luid, vid, did, dvm, dsm, ssm, 16384);
-    }
-
-    // =========================================================================
-    // COM VTable dispatch
-    // =========================================================================
-
-    /**
-     * Invokes a COM interface method via its virtual table.
-     *
-     * <p>The vtable is stored at the object's memory address. Each entry is an
-     * 8-byte function pointer (x64). This method reads the target function
-     * pointer, wraps it in a {@link Function}, and invokes it.</p>
-     *
-     * @param object       the COM object pointer
-     * @param vtableIndex  zero-based index into the vtable
-     * @param args         method arguments (auto-marshalled by JNA)
-     * @return the int HRESULT returned by the method
-     */
-    static int invokeVTable(Pointer object, int vtableIndex, Object... args) throws Exception {
-        System.out.printf("invokeVTable: obj=%s vtableIndex=%d%n", object, vtableIndex);
-        Pointer vtable = object;
-        long fnAddr = vtable.getLong(vtableIndex * 8);
-        System.out.printf("  vtable[%d] addr=0x%s%n", vtableIndex, Long.toHexString(fnAddr));
-        if (fnAddr == 0) throw new Dx12Exception("Null vtable entry at index " + vtableIndex, 0x80004005);
-        Function fn = Function.getFunction(new Pointer(fnAddr));
-        Object result = fn.invoke(int.class, args);
-        return ((Number) result).intValue();
-    }
-
-    // =========================================================================
-    // Inner: ComPtr — auto-closeable COM pointer holder
-    // =========================================================================
-
-    /**
-     * Holds a COM interface pointer and auto-Releases it on close.
-     */
-    static class ComPtr implements AutoCloseable {
-        private final Pointer ptr;
-        private boolean released;
-
-        ComPtr(Pointer ptr) {
-            System.out.printf("  ComPtr created: ptr=%s nativeValue=0x%s%n", ptr, Long.toHexString(Pointer.nativeValue(ptr)));
-            this.ptr = ptr;
-        }
-        Pointer get() { return ptr; }
-
-        @Override
-        public void close() {
-            if (released || ptr == null) return;
-            released = true;
-            try { invokeVTable(ptr, 2 /* Release */); } catch (Exception ignored) {}
-        }
+        Memory m = new Memory(16);
+        m.write(0, guid, 0, 16);
+        return m;
     }
 }
